--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 <h1>My website</h>
   <h2> My website is about random things! </h2>
 </body>
+  
+  <iframe src="https://giphy.com/embed/3boPPdHk2ueo8" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dog-puppy-dachshund-3boPPdHk2ueo8">via GIPHY</a></p>
 
 </html>
