--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
      body{
         text-align: center;
-        background-image: linear-gradient(rgb(61, 236, 255), rgb(230, 82, 250), rgb(242, 239, 73));
+        background-image: rgb(125, 158, 209));
         min-width: 100%;
         min-height: 100%;
       }
